tests/errors/operators/string_logical_violations.sad
show("foo" and "bar")
show("" or "fallback")
